--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ header .hamburger-menu {
 
 section {
   min-height: 100vh;
-  background-image: url("img/bg2.png");
+  background-image: url("img/bg2.jpg");
   background-size: cover;
   background-position: center;
   display: flex;
