--- a/style.css
+++ b/style.css
@@ -638,7 +638,7 @@ a {
   .text-container {
       max-width: 100%; /* El texto ocupará todo el ancho disponible */
       margin-right: 0; /* Elimina el margen a la derecha en pantallas pequeñas */
-      margin-bottom: 20px; /* Agrega margen inferior para separación */
+      
   }
 
   .image-container {
@@ -647,7 +647,7 @@ a {
   }
 
   .image-container img {
-      max-width: 80%; /* La imagen se ajustará a un tamaño más razonable */
+      
       height: auto; /* Mantiene la relación de aspecto */
       margin: 0 auto; /* Centra la imagen */
   }
@@ -655,4 +655,72 @@ a {
   .new-section h1 {
       font-size: 2.5rem; /* Reduce el tamaño del título en pantallas pequeñas */
   }
+}
+.footer-bottom a {
+  position: relative;
+  display: inline-block;
+  color: #888;
+  text-decoration: none;
+  padding: 5px 10px;
+  border-radius: 20px;
+  transition: all 0.5s ease;
+}
+
+.footer-bottom a:hover {
+  background: linear-gradient(45deg, rgb(172, 227, 235), #1a4146, #000); /* Degradado de celeste a negro */
+  color: white; /* Cambio de color del texto a blanco */
+  transform: scale(1.05); /* Zoom del texto */
+  color: white !important; /* Letras blancas al hacer hover */
+}
+@keyframes scroll {
+  from { transform: translateX(0); }
+  to { transform: translateX(-50%); }
+}
+
+.marquee-container {
+  background-color: #000;
+  padding: 15px 0;
+  overflow: hidden;
+  white-space: nowrap;
+  display: flex;
+}
+
+.marquee-content {
+  display: flex;
+  font-size: 6rem;
+  color: transparent;
+  font-family: 'Kanit', sans-serif;
+  font-weight: bold;
+  -webkit-text-stroke: 2px white;
+  animation: scroll 30s linear infinite;
+}
+
+/* Duplicamos el contenido para que parezca un bucle sin cortes */
+.marquee-content span {
+  display: flex;
+  gap: 2rem; /* Espaciado entre los elementos */
+  animation: scroll  linear infinite;
+}
+@media (max-width: 1024px) { /* Tablets */
+  .marquee-content {
+      font-size: 5rem; 
+      -webkit-text-stroke: 1.5px white;
+  }
+}
+
+@media (max-width: 768px) { /* Celulares grandes */
+  .marquee-content {
+      font-size: 4rem;
+      -webkit-text-stroke: 1px white;
+  }
+}
+
+@media (max-width: 480px) { /* Celulares pequeños */
+  .marquee-content {
+      font-size: 3rem;
+      -webkit-text-stroke: 0.8px white;
+  }
+}
+body {
+  cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24"><path fill="%23FFF" stroke="%23000" stroke-width="2" d="M5.5 3.21V20.8c0 .45.54.67.85.35l4.86-4.86a.5.5 0 0 1 .35-.15h6.87a.5.5 0 0 0 .35-.85L6.35 2.85a.5.5 0 0 0-.85.35Z"></path></svg>'), auto;
 }
