--- a/post.css
+++ b/post.css
@@ -177,7 +177,7 @@ body {
     display: block;
     width: 100%;
     height: 3px;
-    background: linear-gradient(90deg, transparent, #617eff, transparent);
+    background: linear-gradient(90deg, transparent, #999999, transparent);
     position: absolute;
     bottom: -10px;
     left: 0;
@@ -192,7 +192,7 @@ body {
 
 .credits p strong {
     font-weight: 700;
-    color: #617eff;
+    color: #dadada;
 }
 
 .credits .divider {
