--- a/style.css
+++ b/style.css
@@ -133,12 +133,14 @@ header .hamburger-menu {
 
 section {
   min-height: 100vh;
-  background-image: url("img/bg2.jpg");
+  background-image: url("img/fondo_test.jpg");
   background-size: cover;
   background-position: center;
   display: flex;
   align-items: center;
+  
 }
+
 
 section .container .content {
   display: flex;
